--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
   "author": "ipaolo_20049427",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "moment": "^2.30.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sqlite3": "^5.1.7"
   }
 }
